ui and integration updates

--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,22 +1,83 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+aiXplain==0.2.20
 annotated-types==0.7.0
 anyio==4.6.2.post1
+attrs==24.2.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
+dataclasses-json==0.6.7
+Deprecated==1.2.14
+dirtyjson==1.0.8
 fastapi==0.115.0
+filetype==1.2.0
+frozenlist==1.4.1
+fsspec==2024.9.0
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.65.0
+greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.6
+httplib2==0.22.0
 httptools==0.6.4
+httpx==0.27.2
 idna==3.10
+Jinja2==3.1.4
+joblib==1.4.2
+llama-index-core==0.11.19
+MarkupSafe==3.0.2
+marshmallow==3.23.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.4.1
+nltk==3.9.1
+numpy==1.26.4
+oauthlib==3.2.2
+packaging==24.1
+pandas==2.2.3
+pillow==11.0.0
+propcache==0.2.0
+proto-plus==1.24.0
+protobuf==5.28.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+sambanova==0.2.0
+six==1.16.0
 slack_sdk==3.33.1
 sniffio==1.3.1
+SQLAlchemy==2.0.36
 starlette==0.38.6
+tenacity==8.5.0
+tiktoken==0.8.0
+tqdm==4.66.5
+typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
 uvicorn==0.30.6
 uvloop==0.21.0
+validators==0.34.0
 watchfiles==0.24.0
 websockets==13.1
-python-dotenv==1.0.1
-slack_sdk==3.33.1
-
+wrapt==1.16.0
+yarl==1.15.5
